--- a/semana1/portfolio/style.css
+++ b/semana1/portfolio/style.css
@@ -149,7 +149,14 @@ body {
     text-align: right;
 }
 
-.projetos {
-    float: left;
-    text-align: left;
+button {
+    display: block;
+    margin-top: 20px;
+}
+
+.detalhes {
+    margin-top: -120px;
+    margin-left: -160px;
+    text-decoration: none;
+    color: gray;
 }
