Realização da atividade portifolio

--- a/semana1/portfolio/style.css
+++ b/semana1/portfolio/style.css
@@ -160,3 +160,9 @@ button {
     text-decoration: none;
     color: gray;
 }
+
+.end {
+    text-decoration: none;
+    color: gray;
+    margin-left: 155px;
+}
