--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -72,6 +72,8 @@ div img {
     color: white;
 }
 
+#container-de-descricao>p {}
+
 #container-de-descricao>ol {
     padding: 15px 0px;
 }
@@ -102,6 +104,7 @@ div:last-child {
 
 table {
     width: 60%;
+    text-align: center;
 }
 
 td button {
