Todas as cores dos botões ficam brancas quando clicadas e escuras com a mesma cor quando se passa o mouse, utilizando as propriedades hover e focus

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -59,6 +59,10 @@ div img {
     height: 15px;
 }
 
+button:hover {
+    background-color: #c44f00;
+}
+
 
 /** 
   *
@@ -71,8 +75,6 @@ div img {
     background-color: #2274a5;
     color: white;
 }
-
-#container-de-descricao>p {}
 
 #container-de-descricao>ol {
     padding: 15px 0px;
@@ -132,6 +134,10 @@ td button {
 
 #back-button:hover {
     background-color: #635a3d
+}
+
+#back-button:focus {
+    color: white;
 }
 
 img {
