borda inferir inserida, utilizando border-bottom

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -109,6 +109,10 @@ table {
     text-align: center;
 }
 
+input {
+    border-bottom: 3px solid;
+}
+
 td button {
     background-color: #fadf63;
     width: 150px;
