--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -58,7 +58,9 @@ div img {
 }
 
 .icone {
-    height: 15px;
+    width: 30px;
+    height: 30px;
+    background-color: white;
 }
 
 button:hover {
@@ -122,7 +124,8 @@ table {
 }
 
 input {
-    border-bottom: 3px solid;
+    border: none;
+    border-bottom: 2px solid;
 }
 
 td button {
