--- a/semana2/aula6-flexboxGrid/gridGarden.css
+++ b/semana2/aula6-flexboxGrid/gridGarden.css
@@ -294,3 +294,21 @@
 
 
 /*level 22*/
+
+#garden {
+    display: grid;
+    grid-template-columns: 100px 3em 40%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+}
+
+
+/*level 23*/
+
+#garden {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+}
+
+
+/*level 24*/
